# espFileServer

./: .gitmodules  CMakeLists.txt  Kconfig.projbuild  file_server.c  mount_spiffs.c  partitions.csv
include/: file_server.h  mount_spiffs.h
main/: CMakeLists.txt  main.cpp
